--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    implementation "androidx.gridlayout:gridlayout:1.0.0"
+    implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.media3:media3-exoplayer-hls:1.2.0"
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
