--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    annotationProcessor "com.github.bumptech.glide:compiler:4.16.0"
+    implementation "com.github.bumptech.glide:glide:4.16.0"
     implementation "androidx.gridlayout:gridlayout:1.0.0"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.media3:media3-exoplayer-hls:1.2.0"
