--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.tiviclone.cine"
         minSdk 24
         targetSdk 34
-        versionCode 3  // Subimos versión para forzar actualización
-        versionName "2.0"
+        versionCode 4
+        versionName "2.1"
     }
 
     buildTypes {
@@ -36,17 +36,17 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     
-    // EXOPLAYER (Reproductor)
+    // REPRODUCTOR
     implementation 'androidx.media3:media3-exoplayer:1.2.0'
     implementation 'androidx.media3:media3-ui:1.2.0'
     implementation 'androidx.media3:media3-common:1.2.0'
     implementation 'androidx.media3:media3-datasource-okhttp:1.2.0'
     
-    // DISEÑO (Grid y Tarjetas)
+    // DISEÑO
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.gridlayout:gridlayout:1.0.0"
     
-    // IMAGENES (Glide) - CRÍTICO PARA QUE NO SE CIERRE AL CARGAR LOGOS
+    // IMÁGENES (GLIDE)
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
     
